fix: adjusts z-index

--- a/app/styles/Layout.module.css
+++ b/app/styles/Layout.module.css
@@ -100,6 +100,7 @@
   flex: 1;
   flex-direction: row;
   gap: 2rem;
+  margin-top: 10px;
   min-height: 0;
   padding-top: 0.5rem;
   width: 100%;
