--- a/app/styles/Progress.module.css
+++ b/app/styles/Progress.module.css
@@ -8,6 +8,9 @@
   justify-content: flex-start;
   margin: 22px 0 0 20px;
   width: 310px;
+}
+
+.hit {
   z-index: 6;
 }
 
